--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
           <a href="#" class="logo">
               <img src="img/logo.svg" alt="Sportbit">
           </a>
-          <span id="clock"
-          style="background-color: #fff; color: #000; border:4px outset #000; padding:5px 20px;" class="clocks">
+          <span id="clock" class="clocks">
           </span>
            <div class="wrapper">
                <img src="img/watch.png" alt="Watch" class="image">
